--- a/Vladyslav.K/go/workshop/3/sonar-project.properties
+++ b/Vladyslav.K/go/workshop/3/sonar-project.properties
@@ -1,5 +1,5 @@
-  sonar.projectKey=Terratest
-  sonar.projectName=Terratest
+  sonar.projectKey=Workshop-3
+  sonar.projectName=Workshop-3
 
   sonar.sources=.
   sonar.exclusions=*_test.go
